Introduce a DcopExecutor, deprecated static junk.
Change-Id: I2ab961afd0475693662604356b7946f8f12d2478
Reviewed-on: http://gerrit.dmdirc.com/3647
Automatic-Compile: DMDirc Build Manager
Reviewed-by: Greg Holmes <greg@dmdirc.com>